--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-bootstrap-time-input-group",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
     "doc": "doc",
@@ -48,7 +48,7 @@
   "dependencies": {
     "ember-cli-babel": "^6.x",
     "ember-cli-htmlbars": "*",
-    "ember-truth-helpers": "^1.2.0"
+    "ember-truth-helpers": "*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
